[package]
name = "bevy-inspect-entity-hierarchy"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2024"
description = "Displays bevy entity hierarchies and components."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yrns/bevy-inspect-entity-hierarchy"
repository = "https://github.com/yrns/bevy-inspect-entity-hierarchy"
keywords = ["bevy"]
categories = ["game-development", "development-tools::debugging"]

[dependencies]
bevy_color = "0.17"
bevy_ecs = { version = "0.17", default-features = false, features = ["trace"] }
nu-ansi-term = "0.50.3"
